--- a/try-us-page.html
+++ b/try-us-page.html
@@ -56,24 +56,46 @@
                 Get ready to dance, sweat, and smile your way to a healthier you. 
                 Join us and discover the perfect fusion of fitness and fun!</p>
         </section>
-        <section class="claim-pass-form">
-            <form>
-                <div class="free-pass">
-                    <h2>Free Day Pass</h2>
-                    <p>Claim your free pass</p>
-                </div>
-                <div class="form-row">
-                    <input type="text" placeholder="First Name">
-                    <input type="text" placeholder="Last Name">
-                    <label class="terms-label">
-                        <input type="checkbox" name="terms" value="agree">
-                        I agree to the Terms of Service
-                    </label>
-                </div>
-                <div class="form-row">
-                    <input type="email" placeholder="Email">
-                    <input type="tel" placeholder="Phone Number">
-                    <button type="submit" class="free-pass-button">Claim Pass</button>
+<section class="claim-pass-form">
+    <div class="free-pass">
+        <h2>Free Day Pass</h2>
+        <p>Claim your free pass</p>
+        </div>
+    <form>
+    <div class="form-row">
+        <div class="input-container">
+            <label for="first-name">First Name</label>
+            <input type="text" id="first-name" name="first-name">
+        </div>
+        <div class="input-container">
+            <label for="last-name">Last Name</label>
+            <input type="text" id="last-name" name="last-name">
+        </div>
+    </div>
+    <div class="form-row">
+        <div class="input-container">
+            <label for="email">Email</label>
+            <input type="email" id="email" name="email">
+        </div>
+        <div class="input-container">
+            <label for="phone">Phone Number</label>
+            <input type="tel" id="phone" name="phone">
+        </div>
+    </div>
+    <div class="form-row">
+        <div class="checkbox-container">
+            <label class="terms-label">
+                <input type="checkbox" id="terms" name="terms">
+                I agree to the Terms of Service
+            </label>
+        </div>
+        <div class="button-container">
+            <button class="free-pass-button">Claim Pass</button>
+        </div>
+    </div>
+</section>
+
+        
                 </div>
             </form>
         </section>
