Changing link to payment

--- a/signup-page.html
+++ b/signup-page.html
@@ -193,7 +193,7 @@
 
             if (validLogin) {
                 // Redirect to home-page.html
-                window.location.href = 'home-page.html';
+                window.location.href = 'payment-page.html';
             } else {
                 // Handle failed login, display error message, etc.
                 alert("Login failed. Please check your credentials.");
