--- a/timetable-page.html
+++ b/timetable-page.html
@@ -117,7 +117,7 @@
         <h1 id="home">Zumba</h1>
         <nav>
             <ul>
-                <li>News</li>
+                <li id="news">News</li>
             </ul>
             <ul>
                 <li id="try-us">Try Us</li>
@@ -126,10 +126,10 @@
                 <li id="timetable">Timetable</li>
             </ul>
             <ul>
-                <li>About Us</li>
+                <li id="about-us">About Us</li>
             </ul>
             <ul>
-                <li>Contact</li>
+                <li id="contact">Contact</li>
             </ul>
         </nav>
     </header>
